--- a/sports.html
+++ b/sports.html
@@ -5,7 +5,9 @@
   <title>RK Polagani | Sports & Fitness</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Sports interests, experiences, and inspirations of Ramakrishna (RK) Polagani — cricket, baseball, Formula 1, fitness, and more." />
+  <link rel="icon" type="image/png" href="images/favicon-rk-logo.png" id="favicon">
   <link rel="stylesheet" href="style.css">
+
 
   <!-- Page-specific polish -->
   <style>
