--- a/travel.html
+++ b/travel.html
@@ -5,6 +5,7 @@
   <title>RK Polagani | Travelling Experiences</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Travelling experiences of Ramakrishna (RK) Polagani – from a first solo journey to Leh Ladakh in 2017 to exploring new cultures and landscapes across India and beyond." />
+  <link rel="icon" type="image/png" href="images/favicon-rk-logo.png" id="favicon">
   <link rel="stylesheet" href="style.css">
 
   <!-- Page-specific styling for a clean, Apple-like layout -->
