--- a/travel.html
+++ b/travel.html
@@ -272,5 +272,15 @@
   });
 </script>
 
+<!-- Parallax glow effect -->
+<script>
+  const updateParallax = () => {
+    const offset = window.scrollY * 0.18;
+    document.documentElement.style.setProperty('--hero-parallax', `${-offset}px`);
+  };
+
+  window.addEventListener('scroll', updateParallax);
+  updateParallax();
+</script>
 </body>
 </html>
