--- a/sports.html
+++ b/sports.html
@@ -42,6 +42,7 @@
         <a href="index.html#projects">Projects</a>
         <a href="index.html#contact">Contact</a>
         <a href="travel.html">Travelling</a>
+        <a href="blogs.html">Blog</a>
         <a href="sports.html" class="active">Sports</a>
       </nav>
     </div>
