--- a/travel.html
+++ b/travel.html
@@ -78,6 +78,7 @@
           <a href="index.html#contact">Contact</a>
           <a href="travel.html" class="active">Travelling</a>
           <a href="sports.html">Sports</a>
+          <a href="blogs.html">Blog</a>
         </nav>
       </div>
     </div>
