--- a/blogs.html
+++ b/blogs.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>RK Polagani | Blogs & Articles</title>
+  <title>RK Polagani | Blogs and Articles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Blog posts and articles by Ramakrishna (RK) Polagani on PLM, integrations, travel, sports, and personal reflections." />
   <link rel="icon" type="image/png" href="images/favicon-rk-logo.png" id="favicon">
   <link rel="stylesheet" href="style.css">
 
-  <!-- Page-specific polish (match Sports layout) -->
+  <!-- Page-specific polish (similar to Sports layout) -->
   <style>
     .blogs-hero {
       max-width: 780px;
@@ -19,7 +19,7 @@
       font-size: 2.1rem;
     }
 
-    /* Blog cards grid – same rhythm as sports/travel */
+    /* Blog cards grid */
     .blog-list {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -27,7 +27,6 @@
       margin-top: 12px;
     }
 
-    /* Inner cards inside the list – lighter, like sports cards */
     .blog-list .card {
       box-shadow: none;
     }
@@ -37,7 +36,6 @@
       font-size: 1.05rem;
     }
 
-    /* Make blog titles look like headings, not default blue links */
     .blog-list h3 a {
       color: inherit;
       text-decoration: none;
@@ -50,7 +48,6 @@
 </head>
 <body>
 
-<!-- Header -->
 <header>
   <div class="container">
     <div class="top-bar">
@@ -77,70 +74,72 @@
   <!-- Hero / Intro -->
   <section class="reveal">
     <div class="card blogs-hero">
-      <h1 style="margin-bottom:10px;">Blogs &amp; Articles</h1>
+      <h1 style="margin-bottom:10px;">Blogs and Articles</h1>
       <p class="card-subtitle">
-        Longer stories and reflections that don’t fit into a LinkedIn post.
+        Longer stories and reflections that do not fit into a short post.
       </p>
       <p>
-        This space is for writing about the things I care about PLM and integrations,
-        working across teams and countries, travel journeys like Leh Ladakh, and what
-        sports have taught me about focus and discipline.
+        This space is for writing about the things I care about: PLM and integrations,
+        working with teams across countries, travel journeys like Leh Ladakh, and what
+        sports have taught me about focus, discipline, and handling pressure.
       </p>
       <p>
-        Think of it as a slow, written version of my experiences: some posts technical,
-        some personal, all based on what I’ve actually seen and learned over the years.
+        Think of it as a slower, written version of my experiences. Some posts are technical,
+        some are personal, but all of them come from what I have actually seen and learned
+        over the years.
       </p>
     </div>
   </section>
 
   <!-- Latest posts -->
   <section class="reveal">
-    <div class="section-caption">Latest Posts</div>
+    <div class="section-caption">Latest posts</div>
     <div class="card">
-      <h2>Latest Posts</h2>
+      <h2>Latest posts</h2>
 
       <div class="blog-list">
 
-        <!-- Post 1 -->
+        <!-- Post 1: PLM Journey -->
         <div class="card">
           <h3>
-            <a href="blog-001-leh-ladakh.html">
-              My 2017 Solo Trip to Leh Ladakh  A Journey That Changed Me
+            <a href="blog-001-plm-journey.html">
+              My PLM Journey from Test Automation to Digital Threads
             </a>
           </h3>
-          <div class="item-meta">Travel · Reflection</div>
+          <div class="item-meta">PLM | Career story</div>
           <p>
-            How a solo journey from Hyderabad to the mountains of Ladakh shifted my
-            perspective on risk, comfort zones, and people and why I still think
-            about that trip whenever I make big decisions.
+            How a test automation assignment with Oracle Agile PLM in 2011 turned into
+            a long-term career in Product Lifecycle Management and opened the door to
+            working abroad and eventually settling in Canada.
           </p>
         </div>
 
-        <!-- Post 2 -->
+        <!-- Post 2: Leh Ladakh (to be written later) -->
         <div class="card">
           <h3>
-            <a href="blog-002-plm-digital-thread.html">
-              Building a Digital Thread: Practical Lessons from PLM Integrations
+            <a href="blog-002-leh-ladakh.html">
+              My 2017 Solo Trip to Leh Ladakh – A Journey That Changed Me
             </a>
           </h3>
-          <div class="item-meta">PLM · Systems · Experience</div>
+          <div class="item-meta">Travel | Reflection</div>
           <p>
-            Real-world lessons from connecting PLM, ERP, ALM, and QMS — what actually
-            works, what usually breaks, and how to keep stakeholders aligned.
+            A solo trip from Hyderabad to the mountains of Ladakh that changed how I look
+            at risk, comfort zones, and people, and why I still think about that journey
+            when I make big decisions.
           </p>
         </div>
 
-        <!-- Post 3 -->
+        <!-- Post 3: Sports mindset (to be written later) -->
         <div class="card">
           <h3>
             <a href="blog-003-sports-mindset.html">
               What Sports Taught Me About Work, Focus, and Handling Pressure
             </a>
           </h3>
-          <div class="item-meta">Sports · Mindset</div>
+          <div class="item-meta">Sports | Mindset</div>
           <p>
-            From SRH chases to Blue Jays games and F1 races the patterns and
-            mindsets that translate directly into how I approach projects and change.
+            Lessons from following cricket, baseball, and Formula 1 and how the patterns
+            in sport influence the way I approach projects, pressure, and change at work.
           </p>
         </div>
 
@@ -154,29 +153,28 @@
     <div class="card">
       <div class="two-col">
         <div>
-          <h2 style="margin-top:0;">PLM, Systems &amp; Work</h2>
+          <h2 style="margin-top:0;">PLM, Systems, and Work</h2>
           <p>
-            Posts about PLM implementations, integrations, digital thread, and
-            the practical side of working as a Business Systems Analyst and
-            PLM Architect across different industries.
+            Posts about PLM implementations, integrations, digital thread, and the day-to-day
+            reality of working as a Business Systems Analyst and PLM Architect across different
+            industries.
           </p>
           <ul>
             <li>Teamcenter, Agile PLM, Windchill, MechWorks PDM.</li>
             <li>Connecting PLM with ERP, MES, ALM, and QMS.</li>
-            <li>Workflows, change control, data quality, and adoption.</li>
+            <li>Workflows, change control, data quality, and user adoption.</li>
           </ul>
         </div>
         <div>
-          <h2 style="margin-top:0;">Travel, Sports &amp; Life</h2>
+          <h2 style="margin-top:0;">Travel, Sports, and Life</h2>
           <p>
-            More personal writing solo trips, moving countries, following
-            sports, and how all of that influences how I think about people,
-            teams, and decisions.
+            More personal writing: solo trips, moving countries, following sports, and how
+            all of that shapes how I think about people, teams, and decisions.
           </p>
           <ul>
-            <li>Leh Ladakh and other journeys.</li>
-            <li>Cricket, baseball, Formula 1.</li>
-            <li>Mindset, discipline, and balance.</li>
+            <li>Leh Ladakh and other travel journeys.</li>
+            <li>Cricket, baseball, and Formula 1.</li>
+            <li>Mindset, discipline, balance, and resilience.</li>
           </ul>
         </div>
       </div>
