--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8" />
   <title>Ramakrishna Polagani | PLM Techno-functional Architect and Business Systems Analyst</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ramakrishna (RK) Polagani - PLM Techno-functional Architect and Business Systems Analyst specializing in Teamcenter, Oracle Agile PLM, and end-to-end PLM-ERP-MES integrations." />
+  <meta name="description" content="Ramakrishna (RK) Polagani - PLM Techno-functional Architect and Business Systems Analyst specializing in Teamcenter, Oracle Agile PLM, and end-to-end PLM ERP MES integrations." />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/favicon-rk-logo.png" id="favicon">
@@ -25,7 +25,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Ramakrishna Polagani | PLM Techno-functional Architect and Business Systems Analyst" />
-  <meta property="og:description" content="PLM Techno-functional Architect and Business Systems Analyst with experience in Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and complex PLM-ERP-ALM integrations." />
+  <meta property="og:description" content="PLM Techno-functional Architect and Business Systems Analyst with experience in Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and complex PLM ERP ALM integrations." />
   <meta property="og:url" content="https://rkpolagani.com/" />
   <meta property="og:image" content="https://rkpolagani.com/images/favicon-rk-logo.png" />
   <meta property="og:image:width" content="800" />
@@ -46,7 +46,7 @@
     "alternateName": "RK Polagani",
     "url": "https://rkpolagani.com/",
     "jobTitle": "PLM Techno-functional Architect and Business Systems Analyst",
-    "description": "PLM Techno-functional Architect specializing in Siemens Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP and end-to-end PLM-ERP-ALM-MES integrations.",
+    "description": "PLM Techno-functional Architect specializing in Siemens Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP and end-to-end PLM ERP ALM MES integrations.",
     "sameAs": [
       "https://www.linkedin.com/in/ramakrishna-polagani-67297ab8/"
     ]
@@ -77,7 +77,7 @@
       </nav>
     </div>
 
-    <!-- Apple-style hero: simple, centered, with a clear story -->
+    <!-- Hero -->
     <div class="hero">
       <div class="reveal" data-delay="1" style="max-width:780px;margin:0 auto;text-align:center;">
 
@@ -91,28 +91,34 @@
         </div>
 
         <h1>Ramakrishna Polagani (RK)</h1>
-        <h2>PLM Techno-functional Architect, Business Systems Analyst, Traveller, Sports Enthusiast</h2>
+        <h2>PLM Techno-functional Architect and Business Systems Analyst</h2>
 
         <p>
-          I work on end-to-end PLM solutions and integrations that connect engineering, manufacturing,
-          quality and finance. Most of my work is about building a reliable digital thread across PLM,
-          ERP, ALM, MES and QMS so that product data stays consistent, traceable and ready for real decisions.
+          I help engineering, manufacturing, quality and IT teams build and connect their product data,
+          from early design all the way to manufacturing and change. My focus is on creating a reliable
+          digital thread across PLM, ERP, ALM, MES and QMS so decisions are based on clean, consistent
+          and traceable information.
         </p>
         <p>
-          This site is also a small personal project where I experiment with clean layouts using HTML, CSS
-          and a bit of JavaScript.
+          I also enjoy learning by building. This site is designed and coded by me using simple HTML,
+          CSS and a bit of JavaScript.
         </p>
 
         <div class="tag-list" style="justify-content:center;">
           <span class="tag">Teamcenter and Agile PLM</span>
-          <span class="tag">PLM-ERP-ALM-MES integration</span>
+          <span class="tag">PLM ERP ALM MES integration</span>
           <span class="tag">Digital thread and traceability</span>
           <span class="tag">Business analysis and architecture</span>
         </div>
 
-        <a href="#projects" class="pill" style="margin-top:8px;display:inline-block;">
-          View selected projects
-        </a>
+        <div style="margin-top:10px;">
+          <a href="#projects" class="pill" style="display:inline-block;margin-right:8px;">
+            View selected projects
+          </a>
+          <a href="assets/Ramakrishna-Polagani-Resume.pdf" target="_blank" rel="noopener" style="font-size:13px;">
+            View resume
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -121,66 +127,68 @@
 <main>
   <div class="container">
 
-    <!-- What I typically do -->
+    <!-- What I do -->
     <section class="reveal" data-delay="1">
+      <div class="section-caption">Focus</div>
       <div class="card">
-        <h2>What I typically do</h2>
+        <h2>What I work on</h2>
         <p class="card-subtitle">The kind of work I usually lead or support.</p>
         <ul>
-          <li><strong>PLM implementations:</strong> Deliver end-to-end PLM rollouts, from workshops and architecture through configuration, testing and go live.</li>
-          <li><strong>PLM-ERP-ALM-MES integrations:</strong> Design and govern integrations using T4X and T4O, Oracle Fusion Middleware, APIs and Power Platform to keep BOMs, changes and product data synchronized.</li>
-          <li><strong>Change and configuration management:</strong> Streamline engineering change flows, approvals and traceability for regulated and complex products.</li>
-          <li><strong>Solution design and governance:</strong> Translate business needs into scalable architectures, interface designs and standards that are maintainable long term.</li>
-          <li><strong>Stakeholder collaboration:</strong> Work across engineering, manufacturing, quality, IT and operations teams to align processes, data models and tools.</li>
+          <li><strong>PLM implementations:</strong> End to end PLM rollouts from discovery workshops and architecture through configuration, testing and go live.</li>
+          <li><strong>PLM ERP ALM MES integrations:</strong> Integration design and governance using T4X and T4O, Oracle Fusion Middleware, APIs and Power Platform to keep BOMs, parts and change data in sync.</li>
+          <li><strong>Change and configuration management:</strong> Designing and improving change flows, approvals and traceability for regulated and complex products.</li>
+          <li><strong>Solution design and governance:</strong> Translating business needs into scalable architectures, interface designs and standards that hold up over time.</li>
+          <li><strong>Stakeholder collaboration:</strong> Working across engineering, manufacturing, quality, IT and operations to align processes, data models and tools.</li>
         </ul>
       </div>
     </section>
 
     <!-- ABOUT -->
     <section id="about" class="reveal" data-delay="1">
+      <div class="section-caption">Profile</div>
       <div class="card">
         <h2>About</h2>
         <p class="card-subtitle">Who I am and how I work.</p>
 
         <p>
-          I am a PLM Techno-functional Architect and Business Systems Analyst with more than
-          fourteen years of experience delivering PLM implementations and integrations across
-          medical devices, hi-tech, aerospace, semiconductor, industrial equipment, consumer goods
-          and healthcare.
+          I am a PLM Techno-functional Architect and Business Systems Analyst with more than fourteen years of
+          experience delivering PLM implementations and integrations across medical devices, hi-tech, aerospace,
+          semiconductor, industrial equipment, consumer goods and healthcare.
         </p>
 
         <p>
           My core strengths are in <strong>Siemens Teamcenter</strong>, <strong>Oracle Agile PLM</strong>,
-          <strong>PTC Windchill</strong> and <strong>MechWorks PDM</strong>, combined with hands-on integration work
+          <strong>PTC Windchill</strong> and <strong>MechWorks PDM</strong>, combined with hands on integration work
           using <strong>T4X and T4O</strong>, <strong>Oracle Fusion Middleware</strong>, <strong>APIs</strong> and
           <strong>Power Platform</strong>. I design integration patterns that connect PLM with
-          <strong>ERP (Oracle EBS, Syspro, SAP, Microsoft Dynamics)</strong>, <strong>ALM (Polarion)</strong>, <strong>MES</strong>
-          and <strong>QMS</strong> to create a reliable digital thread.
+          <strong>ERP (Oracle EBS, Syspro, SAP, Microsoft Dynamics)</strong>, <strong>ALM (Polarion)</strong>,
+          <strong>MES</strong> and <strong>QMS</strong> to create a reliable digital thread.
         </p>
 
         <p>
-          I am comfortable working between business and IT: leading workshops, clarifying requirements,
-          running fit gap analysis and then working with technical teams to make sure solutions are practical,
-          testable and supportable. I like simplifying complex landscapes and aligning tools, data and processes
-          so teams can focus on delivery instead of firefighting integrations.
+          I am comfortable working between business and IT. I lead workshops, clarify requirements, run fit gap analysis
+          and then work with technical teams to make sure solutions are practical, testable and supportable. I like
+          simplifying complex landscapes and aligning tools, data and processes so teams can focus on delivery instead
+          of constantly firefighting integrations.
         </p>
 
         <p>
-          Outside work I enjoy travelling and following sports. Both of these influence how I think about teamwork,
-          adaptability and continuous improvement when working with cross functional and global teams.
+          Outside work I enjoy travelling and following sports. Both influence how I think about teamwork, resilience,
+          and continuous improvement when working with cross functional and global teams.
         </p>
       </div>
     </section>
 
     <!-- EXPERIENCE -->
     <section id="experience" class="reveal" data-delay="1">
+      <div class="section-caption">Experience</div>
       <div class="card">
         <h2>Experience snapshot</h2>
         <p class="card-subtitle">Where I have worked and what I focus on.</p>
         <div class="two-col">
           <div>
             <div class="item">
-              <div class="item-title">Business Systems Analyst / PLM Functional Lead</div>
+              <div class="item-title">Business Systems Analyst and PLM Functional Lead</div>
               <div class="item-meta">StarFish Medical, Canada, Sep 2023 to present</div>
               <ul>
                 <li>Lead cross functional workshops with engineering, manufacturing, quality and finance to define PLM and PDM strategies and digital operations roadmaps.</li>
@@ -192,7 +200,7 @@
             </div>
 
             <div class="item">
-              <div class="item-title">PLM Consultant / Solution Architect</div>
+              <div class="item-title">PLM Consultant and Solution Architect</div>
               <div class="item-meta">Infosys, Canada and India, Jul 2016 to Sep 2023</div>
               <ul>
                 <li>Designed and implemented Siemens Teamcenter and Oracle Agile PLM solutions for global aerospace, hi-tech and industrial clients.</li>
@@ -234,6 +242,7 @@
 
     <!-- SKILLS -->
     <section id="skills" class="reveal" data-delay="1">
+      <div class="section-caption">Skills</div>
       <div class="card">
         <h2>Skills and tools</h2>
         <p class="card-subtitle">Platforms, domains and ways of working.</p>
@@ -244,7 +253,7 @@
               <li>Siemens Teamcenter (BMIDE, T4X, T4O, AIG, SOA services).</li>
               <li>Oracle Agile PLM (SDK, events, web services, ACS, Averify).</li>
               <li>PTC Windchill, MechWorks PDM, Arena PLM.</li>
-              <li>Siemens Polarion ALM administration and ALM-PLM-ERP connectivity.</li>
+              <li>Siemens Polarion ALM administration and ALM PLM ERP connectivity.</li>
             </ul>
 
             <h3 style="font-size:14px;">Enterprise systems and collaboration</h3>
@@ -257,10 +266,10 @@
           <div>
             <h3 style="margin-top:0;font-size:14px;">Integration, automation and delivery</h3>
             <ul>
-              <li>T4X ecosystem (T4O, T4S, T4EA) for PLM-ERP integration.</li>
+              <li>T4X ecosystem (T4O, T4S, T4EA) for PLM ERP integration.</li>
               <li>Oracle Fusion Middleware, WebLogic, API Gateway integrations.</li>
               <li>REST and SOAP web services, XML and JSON mapping, AIG Pipeline Designer.</li>
-              <li>Power Automate, Power Platform, MuleSoft, scripting (Tcl, shell, Bash, Perl).</li>
+              <li>Power Automate, Power Platform, MuleSoft, scripting with Tcl, shell, Bash and Perl.</li>
             </ul>
 
             <h3 style="font-size:14px;">Analysis, data and web</h3>
@@ -268,14 +277,14 @@
               <li>Business analysis, requirements engineering, fit gap and process mapping.</li>
               <li>SQL, Oracle PL/SQL, Unix and Linux, data migration and ETL concepts.</li>
               <li>Reporting and analytics with Power BI and Tableau.</li>
-              <li>SDLC, ITIL, Agile and Waterfall, DevOps and CI/CD, UAT and test strategy.</li>
+              <li>SDLC, ITIL, Agile and Waterfall, DevOps and CI CD, UAT and test strategy.</li>
               <li>HTML5, CSS3 and vanilla JavaScript for building and maintaining this site and small internal tools.</li>
             </ul>
           </div>
         </div>
 
         <ul class="pill-list" style="margin-top:14px;">
-          <li class="pill">PLM-ERP-ALM-MES integrations</li>
+          <li class="pill">PLM ERP ALM MES integrations</li>
           <li class="pill">eBOM and mBOM and change management</li>
           <li class="pill">Compliance and traceability</li>
           <li class="pill">Solution architecture and governance</li>
@@ -287,13 +296,14 @@
 
     <!-- PROJECTS -->
     <section id="projects" class="reveal" data-delay="1">
+      <div class="section-caption">Work</div>
       <div class="card">
         <h2>Selected projects</h2>
         <p class="card-subtitle">Examples of PLM and integration outcomes.</p>
 
         <div class="item">
-          <div class="item-title">Unified PLM-ERP digital thread for medical devices</div>
-          <div class="item-meta">Role: Business Systems Analyst / PLM Functional Lead</div>
+          <div class="item-title">Unified PLM ERP digital thread for medical devices</div>
+          <div class="item-meta">Role: Business Systems Analyst and PLM Functional Lead</div>
           <ul>
             <li>Defined PLM and PDM integration roadmap connecting MechWorks PDM, PLM, Syspro ERP, QMS and ALM for end to end product data flow.</li>
             <li>Ran workshops with engineering, manufacturing and quality teams to capture requirements, pain points and compliance needs.</li>
@@ -304,7 +314,7 @@
 
         <div class="item">
           <div class="item-title">Teamcenter and Oracle ERP integration using T4O</div>
-          <div class="item-meta">Role: PLM Integration Architect / Consultant</div>
+          <div class="item-meta">Role: PLM Integration Architect and Consultant</div>
           <ul>
             <li>Designed and implemented integration of parts, eBOM and mBOM and change orders between Teamcenter and Oracle ERP using T4O.</li>
             <li>Created BMIDE extensions and data validation rules to support enterprise standards and data quality.</li>
@@ -315,7 +325,7 @@
 
         <div class="item">
           <div class="item-title">Agile PLM and ERP integration via Oracle Fusion Middleware</div>
-          <div class="item-meta">Role: Solution Architect / Integration Analyst</div>
+          <div class="item-meta">Role: Solution Architect and Integration Analyst</div>
           <ul>
             <li>Designed and delivered end to end integration between Oracle Agile PLM and Oracle EBS using Oracle Fusion Middleware.</li>
             <li>Implemented event driven integrations for new parts, changes and document releases with configurable error handling.</li>
@@ -326,7 +336,7 @@
 
         <div class="item">
           <div class="item-title">PLM process optimization and adoption</div>
-          <div class="item-meta">Role: PLM Consultant / SME</div>
+          <div class="item-meta">Role: PLM Consultant and SME</div>
           <ul>
             <li>Analyzed change cycle times, user behavior and incident trends across multiple business units.</li>
             <li>Suggested workflow, notification and reporting improvements in Agile PLM and Teamcenter.</li>
@@ -339,6 +349,7 @@
 
     <!-- CONTACT -->
     <section id="contact" class="reveal" data-delay="1">
+      <div class="section-caption">Contact</div>
       <div class="card">
         <h2>Contact</h2>
         <p class="card-subtitle">Best ways to reach me.</p>
