--- a/index.html
+++ b/index.html
@@ -77,13 +77,23 @@
       </nav>
     </div>
 
-    <!-- Hero: two-column layout -->
+       <!-- Hero: two-column layout -->
     <div class="hero">
       <div class="hero-grid reveal" data-delay="1">
-        <!-- Left: text -->
+        <!-- Left: name, photo, description -->
         <div>
           <h1>Ramakrishna Polagani (RK)</h1>
           <h2>PLM Techno-functional Architect and Business Systems Analyst</h2>
+
+          <!-- Photo moved here so on mobile it appears right after name + role -->
+          <div class="hero-profile-wrapper" style="margin-bottom:16px;">
+            <img
+              src="assets/images/Profile/IMG-8092.JPG"
+              alt="Ramakrishna Polagani"
+              class="hero-profile-img"
+              loading="lazy"
+            >
+          </div>
 
           <p>
             I help engineering, manufacturing, quality and IT teams connect their product data,
@@ -109,17 +119,8 @@
           </a>
         </div>
 
-        <!-- Right: photo + focus card -->
+        <!-- Right: focus card -->
         <div>
-          <div class="hero-profile-wrapper" style="margin-bottom:16px;">
-            <img
-              src="assets/images/Profile/IMG-8092.JPG"
-              alt="Ramakrishna Polagani"
-              class="hero-profile-img"
-              loading="lazy"
-            >
-          </div>
-
           <div class="hero-card">
             <h3>What I focus on</h3>
             <ul>
