--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
       
      <!-- New: Toronto time + weather -->
       <div class="toronto-meta">
-        <span id="toronto-time"></span>
-        &nbsp;|&nbsp;
-        <span id="toronto-weather"></span>
+         <span class="toronto-label">Toronto •</span>
+         <span id="toronto-time"></span>
+         <span class="toronto-separator">|</span>
+         <span id="toronto-weather"></span>
       </div> 
     </div>
 
